5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1582_2896.log
== TEST (2019-04-02 14:31:54) 
-- CODE:
var=input("lili")
-- OUTPUT:
augusta ada byron, a condessa da lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:32:15) 
-- CODE:
var=input("lili")
-- EXECUTION TIME:
0.183219
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:

-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:34:16) 
-- CODE:
var = input("var:")
print(var)

-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:34:28) 
-- CODE:
var = input("var:")
print(var)

-- EXECUTION TIME:
0.13583
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:37:16) 
-- CODE:
a = input("var")
print(a)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:37:23) 
-- CODE:
a = input("var:")
print(a)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:37:30) 
-- CODE:
a = input("var:")
print(a)
-- EXECUTION TIME:
0.200559
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:37:51) 
-- CODE:
x = input("x:")
print(x)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:37:55) 
-- CODE:
x = input("x:")
print(x)
-- EXECUTION TIME:
0.165436
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:38:55) 
-- CODE:
carlos = 1
lili = 5
print(carlos+lili)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:42:57) 
-- CODE:
s = a + b - c
a = int(input("a:"))
b = int(input("b:"))
c = float(input("c:"))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s = a + b - c
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:43:12) 
-- CODE:
s = (a + b - c)
a = int(input("a:"))
b = int(input("b:"))
c = float(input("c:"))
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    s = (a + b - c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:43:34) 
-- CODE:
a = int(input("a:"))
b = int(input("b:"))
c = float(input("c:"))
s = a + b - c
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'Ada_Lovelace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:43:56) 
-- CODE:
a = int(input("a:"))
b = int(input("b:"))
c = int(input("c:"))
s = a + b - c
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: 'Ada_Lovelace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:49:46) 
-- CODE:
carlos = int(input("carlos:"))
b = int(input("b:"))
c = int(input("c:"))
s = carlos**2 + b*2 + c
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    carlos = int(input())
ValueError: invalid literal for int() with base 10: 'Ada_Lovelace'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:51:32) 
-- CODE:
var = input("var:")
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:51:42) 
-- CODE:
var = input("var:")
print(var)
-- EXECUTION TIME:
0.119526
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
